--- a/configs/nginx-roboshop.conf
+++ b/configs/nginx-roboshop.conf
@@ -5,8 +5,8 @@ location /images/ {
   try_files $uri /images/placeholder.jpg;
 }
 location /api/catalogue/ { proxy_pass http://catalogue-dev.devopsb71.shop:8080/; }
-location /api/user/ { proxy_pass http://user.devopsb71-dev.shop:8080/; }
-location /api/cart/ { proxy_pass http://cart.devopsb71-dev.shop:8080/; }
+location /api/user/ { proxy_pass http://user-dev.devopsb71.shop:8080/; }
+location /api/cart/ { proxy_pass http://cart-dev.devopsb71.shop:8080/; }
 location /api/shipping/ { proxy_pass http://shipping-dev.devopsb71.shop:8080/; }
 location /api/payment/ { proxy_pass http://payment-dev.devopsb71.shop:8080/; }
 
